fixed with spacing on IndividualProfile

--- a/src/Pages/Individual Profile/IndividualProfile.module.scss
+++ b/src/Pages/Individual Profile/IndividualProfile.module.scss
@@ -4,7 +4,7 @@
 
 .individualProfile {
 	margin: 0 auto;
-	width: 100%;
+	width: 75%;
 	min-width: 300px;
 	max-width: 500px;
 
